--- a/flask_app/.env.sample
+++ b/flask_app/.env.sample
@@ -1,3 +1,5 @@
+project_name=auth_movies
+
 # driver
 storage_driver=postgresql
 # host postgres
@@ -11,8 +13,19 @@ redis_host=cache
 # host redis
 redis_port=6379
 
+# host jaeger
+jaeger_host=jaeger
+# host jaeger
+jaeger_port=6831
+
 debug=False
 
 secret_key=# secret key
+
+yandex_client_id=# информация, представленная яндекс
+yandex_client_secret=# информация, представленная яндекс
+
+yandex_baseurl=https://oauth.yandex.ru/
+yandex_info_url=https://login.yandex.ru/
 
 FLASK_APP=main.py:app
