--- a/flask_app/requirements.txt
+++ b/flask_app/requirements.txt
@@ -19,4 +19,7 @@ backoff==2.2.1
 requests==2.28.1
 psycopg2-binary==2.9.5
 redis==4.3.5
-
+opentelemetry-api==1.10.0
+opentelemetry-sdk==1.10.0
+opentelemetry-instrumentation-flask==0.29b1
+opentelemetry-exporter-jaeger==1.10.0
