--- a/nginx_flask/nginx.conf
+++ b/nginx_flask/nginx.conf
@@ -11,7 +11,7 @@ http {
 
     log_format main '$remote_addr - $remote_user [$time_local] "$request"'
                     '$status $body_bytes_sent "$http_referer"'
-                    '"$http_user_agent" "$http_x_forwarded_for"' $request_id';
+                    '"$http_user_agent" "$http_x_forwarded_for"';
     sendfile on;
     tcp_nodelay on;
     tcp_nopush on;
@@ -32,13 +32,10 @@ http {
     proxy_set_header    Host    $host;
     proxy_set_header    X-Real-IP   $remote_addr;
     proxy_set_header    X-Forwarded-Forwarded   $proxy_add_x_forwarded_for;
-    proxy_set_header X-Request-Id $request_id; 
 
     set_real_ip_from  192.168.1.0/24;
     real_ip_header    X-Forwarded-For;
     server_tokens off;
-
-    limit_req_zone $binary_remote_addr zone=auth:10m rate=1r/s;
 
     include conf.d/*.conf;
 }
