--- a/nginx/configs/site.conf
+++ b/nginx/configs/site.conf
@@ -8,9 +8,14 @@ server{
     }
 
 
-    location @backend {
+    location @backend_auth {
         limit_req zone=auth burst=20 nodelay;
         proxy_pass http://auth_api:5000;
+    }
+    
+    location @backend_movies {
+        limit_req zone=auth burst=20 nodelay;
+        proxy_pass http://movies_api:8000;
     }
 
     #location ~* \.(?:jpg|jpeg|gif|png|ico|css|js)$ {
@@ -18,8 +23,12 @@ server{
     #    expires 90d;
     #}
 
-    location ~(admin|api) {
-        try_files $uri @backend;
+    location ~(admin|api/v)\d/movies {
+        try_files $uri @backend_movies;
+    }
+
+    location ~(admin|api/v)\d/auth {
+        try_files $uri @backend_auth;
     }
     error_page 404  /404.html;
     error_page 500 502 503 504  /50x.html;
